# KVStorage

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  storage.py
.github/workflows/: test.yml
kvstorage/: cli.py  storage.py
kvstorage/requests/: delete_request.py  get_request.py
kvstorage/server/: main.py
requests/: delete_request.py  get_request.py  set_request.py
src/: cli.py  storage.py
src/kvstorage/: storage.py
src/kvstorage/requests/: get_request.py  set_request.py
src/requests/: base_request.py  delete_request.py  get_request.py  set_request.py
src/server/: main.py  models.py
tests/: test_api.py  test_cli.py  test_kvstorage.py
