[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvstorage"
version = "0.1.0"
description = "Implementation of a key-value storage"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "deptry>=0.23.0",
]

[project.scripts]
kvstorage = "kvstorage.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvstorage*"]
