[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kvstorage"
version = "0.1.0"
description = "Implementation of a key-value storage"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
client = [
    "click>=8.0",
    "httpx>=0.24.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0",
]
all = [
    "kvstorage[client,server]",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kvstorage*", "server*"]

[project.scripts]
kvstorage = "kvstorage.cli:main"
kvstorage-server = "server.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]